used useRef hook to stop 'flashing' hello-world message on mobile screens

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -25,6 +25,10 @@ section > div {
   padding: 3rem 2rem;
 }
 
+section > span > div {
+  padding: 3rem 2rem;
+}
+
 .menu-enter {
   opacity: 0;
   transform: scale(0.8);
